# sekaibot

./: .gitignore  .ruff.toml  LICENSE  README.md  _types.py  bot.py  config.py  event.py  exceptions.py  log.py  main.py  manager.py  node.py  plugin.py  pyproject.toml  requirements.txt  run-bot.ps1  transport.py  utils.py
.github/workflows/: ci.yml
core/: agent_executor copy.py  memory_manager.py
core/tools/: doc_retrieval.py  utils.py  web_search.py
core/utils/: __init__.py  cachedict.py
example/: chat_config.toml  config.toml  main.py
example/_ai_chat/: __init__.py  history.py  llm.py  prompt.py
example/chat_module/: ChatAPI.py  ChatMemory.py  FileOperation.py  NeteaseCloudMusic.py  config.py
example/nodes/: AutoAcceptRequest.py  CopyWithOther.py  MainNode.py  NormalMsg.py  PokeNotice.py  PrivateChat.py  _MusicReply.py  _PokeNotice.py  _sound.py  sensitive_words_lines.txt
example/nodes/AIChat/: __init__.py  history.py  image.py  llm.py
example/nodes/ai_chat/: __init__.py  agent.py  history.py  image.py  llm.py  moegirl.py  prompt.py  search.py
sekaiBot/: bot.py  config.py  dependencies.py  exceptions.py  log.py  node.py  utils.py
sekaiBot/core/: memory_manager.py
sekaiBot/core/tools/: utils.py
sekaibot/: __init__.py  _types.py  bot.py  config.py  consts.py  dependencies.py  event.py  exceptions.py  log.py  manager.py  node.py  permission.py  plugin.py  rule.py  scheduler.py  typing.py  utils.py
sekaibot/adapter/: __init__.py  utils.py
sekaibot/adapters/cqhttp/: __init__.py  config.py  event.py  exceptions.py
sekaibot/adapters/onebot12/: __init__.py  exceptions.py  message.py
sekaibot/core/: agent_executor copy.py  agent_executor.py  llm_model.py  memory_manager.py  prompt_builder.py
sekaibot/core/tools/: __init__.py  doc_retrieval.py  sample.txt
sekaibot/core/utils/: __init__.py  cachedict.py
sekaibot/dependencies/: __init__.py  utils.py
sekaibot/internal/: event.py  message.py
sekaibot/internal/adapter/: __init__.py  utils.py
sekaibot/internal/node/: __init__.py  load.py  manager.py  node.py
sekaibot/internal/permission/: __init__.py  utils.py
sekaibot/internal/rule/: __init__.py  _counter.py  config.py  utils.py
sekaibot/plugins/openai/: adapter.py  message.py
sekaibot/plugins/scheduler/: __init__.py  config.py
sekaibot/rule/: __init__.py  utils.py
sekaibot/utils/: __init__.py  bot.py  cachedict.py  counter.py
test/: chat_config.toml  config.toml  fake_adapter.py  fake_message.py  main.py  test_bot.py  test_config_load.py  test_dependencies.py  test_hook.py  test_message.py  test_rule.py  try.py
test/chat_module/: ChatAPI.py  ChatGPT.py  LoadConfig.py  MessageEvent.py
test/nodes/: CopyWithOther.py  Main.py  MainNode.py  Node2.py  NormalMsg.py  _AutoAcceptRequest.py  _MusicReply.py  _Node2.py  _NormalMsg.py  _PokeNotice.py  _randsent.py  node1.py
test/nodes/AIChat/: __init__.py  llm.py
test/nodes/node2/: __init__.py
test/test_utils/: test_bot_utils.py  test_cachedict.py  test_counter.py
typings/apscheduler/: __init__.pyi  events.pyi  job.pyi  util.pyi
typings/apscheduler/executors/: asyncio.pyi  base.pyi  pool.pyi
typings/apscheduler/jobstores/: base.pyi  memory.pyi
typings/apscheduler/schedulers/: __init__.pyi  asyncio.pyi  base.pyi
typings/apscheduler/triggers/: base.pyi
typings/pygtrie/: __init__.pyi
typings/pygtrie/IPython/: __init__.pyi
typings/pygtrie/IPython/extensions/: __init__.pyi
typings/pygtrie/IPython/terminal/: __init__.pyi
typings/pygtrie/IPython/utils/: __init__.pyi
typings/pygtrie/annotated_types/: __init__.pyi
typings/pygtrie/anyio/: __init__.pyi
typings/pygtrie/anyio/abc/: __init__.pyi
typings/pygtrie/anyio/streams/: __init__.pyi
typings/pygtrie/argcomplete/: __init__.pyi
typings/pygtrie/asttokens/: __init__.pyi
typings/pygtrie/attrs/: __init__.pyi
typings/pygtrie/backcall/: __init__.pyi
typings/pygtrie/cycler/: __init__.pyi
typings/pygtrie/dotenv/: __init__.pyi
typings/pygtrie/exceptiongroup/: __init__.pyi
typings/pygtrie/executing/: __init__.pyi
typings/pygtrie/fastjsonschema/: __init__.pyi
typings/pygtrie/jedi/: __init__.pyi
typings/pygtrie/jedi/api/: __init__.pyi
typings/pygtrie/jedi/inference/: __init__.pyi
typings/pygtrie/jedi/plugins/: __init__.pyi
typings/pygtrie/jinja2/: __init__.pyi
typings/pygtrie/matplotlib/: __init__.pyi
typings/pygtrie/matplotlib/style/: __init__.pyi
typings/pygtrie/matplotlib_inline/: __init__.pyi
typings/pygtrie/nbformat/: __init__.pyi
typings/pygtrie/nbformat/corpus/: __init__.pyi
typings/pygtrie/nbformat/v1/: __init__.pyi
typings/pygtrie/nbformat/v2/: __init__.pyi
typings/pygtrie/nbformat/v3/: __init__.pyi
typings/pygtrie/nbformat/v4/: __init__.pyi
typings/pygtrie/numpy/: __init__.pyi
typings/pygtrie/numpy/_core/: __init__.pyi
typings/pygtrie/numpy/_typing/: __init__.pyi
typings/pygtrie/numpy/char/: __init__.pyi
typings/pygtrie/numpy/f2py/: __init__.pyi
typings/pygtrie/numpy/fft/: __init__.pyi
typings/pygtrie/numpy/linalg/: __init__.pyi
typings/pygtrie/numpy/ma/: __init__.pyi
typings/pygtrie/packaging/: __init__.pyi
typings/pygtrie/parso/: __init__.pyi
typings/pygtrie/pkg_resources/: __init__.pyi
typings/pygtrie/platformdirs/: __init__.pyi
typings/pygtrie/prompt_toolkit/: __init__.pyi
typings/pygtrie/pure_eval/: __init__.pyi
typings/pygtrie/pydantic/: __init__.pyi
typings/pygtrie/pydantic_core/: __init__.pyi
typings/pygtrie/pyparsing/: __init__.pyi
typings/pygtrie/pypinyin/: __init__.pyi
typings/pygtrie/referencing/: __init__.pyi
typings/pygtrie/rpds/: __init__.pyi
typings/pygtrie/sqlalchemy/: __init__.pyi
typings/pygtrie/stack_data/: __init__.pyi
typings/pygtrie/structlog/: __init__.pyi
typings/pygtrie/traitlets/: __init__.pyi
typings/pygtrie/wcwidth/: __init__.pyi
typings/sekaibot/: bot.pyi  config.pyi  consts.pyi  exceptions.pyi  log.pyi  plugin.pyi  typing.pyi  utils.pyi
typings/sekaibot/adapter/: __init__.pyi  utils.pyi
typings/sekaibot/dependencies/: __init__.pyi  utils.pyi
typings/sekaibot/internal/: event.pyi  message.pyi
(+53 files in other folders)
